<resources>
    <string name="app_name">Travlyn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="sign_in">"Sign in "</string>
    <string name="error_invalid_credentials">Your credentials are invalid.</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="logout">Logout</string>
    <string name="successfully_logged_out">You have successfully logged out.</string>
    <string name="undo">Undo</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_unknown">An unknown error has occurred. In case of problems, please contact the support.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="points_of_interests">Points of Interests</string>
    <string name="trips">Trips</string>
    <string name="error_no_city_found">No city found with name \"%1$s\".</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="hours_unit">%.1f h</string>
    <string name="no_value" translatable="false">---</string>
    <string name="rate">Rate</string>
    <string name="rating_value" translatable="false">%.1f / 5</string>
    <string name="number_of_stop_found">%d points of interests found</string>
    <string name="cancel">Cancel</string>
    <string name="very_bad_rating">Very bad</string>
    <string name="not_good_rating">Bad</string>
    <string name="okay_rating">Okay</string>
    <string name="very_good_rating">Very good</string>
    <string name="excellent_rating">Excellent</string>
    <string name="rate_city">Rate \'%1$s\'</string>
    <string name="request_rate_city">Please give your feedback to the point of interest.</string>
    <string name="request_write_comment">Please write your comment here …</string>
    <string name="successfully_rated_city">Rating was sent successfully!</string>
    <string name="category_place_of_worship">Place of Worship</string>
    <string name="category_building">Building</string>
    <string name="category_monument">Monument</string>
    <string name="category_memorial">Memorial</string>
    <string name="category_artwork">Artwork</string>
    <string name="category_gallery">Gallery</string>
    <string name="category_museum">Museum</string>
    <string name="category_attraction">Attraction</string>
    <string name="number_of_selected_items">%d selected</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="error_server_not_available">The server is currently not available.</string>
    <string name="error_not_signed_in">You have to be signed in to perform this action.</string>
    <string name="error_not_found">Unfortunetly, object was not found.</string>
    <string name="save">Save</string>
    <string name="host_url">Host URL</string>
    <string name="successfully_stored_settings">Settings successfully stored!</string>
    <string name="created_by">Created by %s</string>
    <string name="no_data_available">No data available.</string>
    <string name="create_trip">Create new Trip</string>
    <string name="public_trip">Public Trip</string>
    <string name="successfully_created_trip">Created trip successfully!</string>
    <string name="trip">Trip</string>
    <string name="swipe_to_update_stops">"Swipe down to update stops. "</string>
    <string name="error_password_too_short">Password is too short. It must have at least 4 characters. </string>
    <string name="navigation">Navigation</string>
    <string name="reorder_description">Reorder trips to reduce trip route</string>
    <string name="round_trip_description">Navigate back to start point after trip is finished</string>
    <string name="confirm_cancel_navigation">Are you sure that you want to cancel the navigation?</string>
    <string name="start">Start</string>
    <string name="city">City</string>
    <string name="pipe_operator" translatable="false">|</string>
    <string name="time_unit">%d h %d min</string>
    <string name="skip">Skip</string>
    <string name="distance_unit" translatable="false">%.2f km</string>
    <string name="distance_unit_meters" translatable="false">%d m</string>
    <string name="continue_stop">Continue</string>
    <string name="add_pricing">What price did you pay for this point of interest?</string>
    <string name="add_time_effort_description">How much time have you spent at this point of interest?</string>
    <string name="add_price">Add Pricing</string>
    <string name="add_time_effort">Add Time effort</string>
    <string name="successfully_added_pricing">Price was successfully added!</string>
    <string name="successfully_added_time_effort">Time effort was successfully added!</string>
</resources>
