<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_location_marker"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_border"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_navigation"
            android:title="@string/trips" />
    </group>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_user"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
