<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/stopListImageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop" />

            <ProgressBar
                android:id="@+id/stopListProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <TextView
            android:id="@+id/stopListName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/points_of_interests"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/stopListRatingBar"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stopListRatingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

        </LinearLayout>

        <TextView
            android:id="@+id/stopListDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:lines="4"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stopListCategoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_tag"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/stopListTimeEffortTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_time"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/stopListPricingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/stopListRateButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate" />

            <Button
                android:id="@+id/stopListAddToTripButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>